k8s/jenkins-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jenkins2
spec:
  template:
    metadata:
      labels:
        app: jenkins2
    spec:
      containers:
      - name: jenkins2
        image: jenkins/jenkins:lts
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: jenkinshome
          mountPath: /var/jenkins_home
      volumes:
      - name: jenkinshome
        hostPath: 
         path: /var/jenkinshome
         type: Directory
