k8s/oracldb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orcldb
  labels:
    app: oracledb
spec:
  selector:
    matchLabels:
      app: oracledb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: oracledb
    spec:
      containers:
#      - image: javiermugueta/oracledb
#      - image: fra.ocir.io/<tenantname>/atrepo/orcldb:latest
      - image: store/oracle/database-enterprise:12.2.0.1
        name: orcldb
        ports:
        - containerPort: 1521
          name: orcldb
        volumeMounts:
        - name: data
          mountPath: /ORCL
      imagePullSecrets:
        - name: oradocreg
      securityContext:
        runAsNonRoot: true
        runAsUser: 54321
        fsGroup: 54321
      volumes:
        - name: data
          hostPath:
                  path: /var/opt/oracle
                  type: Directory
---
apiVersion: v1
kind: Service
metadata:
 name: oracledb
spec:
 type: NodePort
 selector:
   app: oracledb
 ports:
   - name: client
     protocol: TCP
     port: 1521
     nodePort: 31521
 selector:
   app: oracledb
