k8s/ingress-hosts.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - jenkins.local
    secretName: k8s-dashboard-secret

  rules:
  - host: jenkins.local
    http:
      paths:
      - backend:
          serviceName: jenkins2
          servicePort: 8080
