k8s/ingress22.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress2
  annotations:
    kubernetes.io/ingress.class: "internal-nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: jenkins2
          servicePort: 8080
      - path: /test/*
        backend:
          serviceName: inginx-7bb7cd8db5
          servicePort: 80
