k8s/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
   - secretName: k8s-dashboard-secret
  rules:
  - host: testk8s.com
    http:
      paths:
      - backend:
          serviceName: jenkins2
          servicePort: 8080
