k8s/kubectl-edit-sryb7.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
spec:
  backend:
    serviceName: jenkins2
    servicePort: 8080
