k8s/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-inginx
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /   #不加这个重定向后的url会带过去
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"  #如果后端是https协议必须
    #nginx.org/ssl-services: kubernetes-dashboard
    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/secure-backends: "true"

    #nginx.ingress.kubernetes.io/configuration-snippet: rewrite ^(/dashboard)$ $1/ permanent;



spec:
  tls:
   - secretName: k8s-dashboard-secret
  rules:
    - host: testk8s.local
      http:
        paths:
        - path: /
          backend:
            serviceName: nginx0
            servicePort: 80
        #- path: /
        #  backend:
        #    serviceName: kubernetes-dashboard
        #    servicePort: 443
