k8s/node-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nodenpm
spec:
  template:
    metadata:
      labels:
        app: nodenpm
    spec:
      terminationGracePeriodSeconds: 10
      #nodeSelector:
        #type: master01
      containers:
      - name: node
        image: node:10-alpine
        imagePullPolicy: IfNotPresent
        command: ["/bin/sh"]
        args: ["-c","cd /apps/&&npm start"]
        ports:
        - containerPort: 3000
          name: web
          protocol: TCP

        volumeMounts:
        - name: apps
          mountPath: /apps
      securityContext:
        fsGroup: 1000
      volumes:
      - name: apps
        hostPath:
          path: /Users/alexwang/git/reactapp
          type: Directory

---
apiVersion: v1
kind: Service
metadata:
  name: nodenpm
  labels:
    app: nodenpm
spec:
  selector:
    app: nodenpm
  ports:
  - name: web
    port: 3000
    targetPort: web


#openssl req -new -x509 -key tls.key -out tls.crt -subj /C=CN/ST=Beijing/L=Beijing/O=DevOps/CN=tomcat.along.com
#kubectl create secret tls tomcat-ingress-secret --cert=tls.crt --key=tls.key
#kubectl create secret tls k7s-dashboard-secret --cert=tls.crt --key=tls.key
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nodenpm-inginx
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  tls:
   - secretName: tls-secret
  rules:
    - host: npm.local
      http:
        paths:
        - path: /
          backend:
            serviceName: nodenpm
            servicePort: 3000
