k8s/single-Ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: single-ingress
spec:
  backend:
    serviceName: jenkins2
    servicePort: 8080
